[gd_scene load_steps=8 format=3 uid="uid://dnf8fupbfsi08"]

[ext_resource type="Script" path="res://scripts/scene_2d/builder_slider.gd" id="1_l1yij"]
[ext_resource type="Shader" path="res://scripts/shaders/BasicTile.gdshader" id="2_ndq7t"]
[ext_resource type="Texture2D" uid="uid://da0dr8id0tfyg" path="res://assets/scenes/minus_icon.png" id="9_fh68b"]
[ext_resource type="Texture2D" uid="uid://cd4thk6wwhph7" path="res://assets/scenes/slider.png" id="9_sippf"]
[ext_resource type="Texture2D" uid="uid://dlnvex8emrsfi" path="res://assets/scenes/invert_icon.png" id="10_57cju"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_42k15"]
resource_local_to_scene = true
shader = ExtResource("2_ndq7t")
shader_parameter/base_color = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x3468"]
size = Vector2(128, 256)

[node name="BuilderSlider" type="Node2D"]
position = Vector2(514, 625)
script = ExtResource("1_l1yij")

[node name="Slider" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_42k15")
texture = ExtResource("9_sippf")
region_rect = Rect2(133, 0, 123, 256)

[node name="Collision" type="Area2D" parent="Slider"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slider/Collision"]
shape = SubResource("RectangleShape2D_x3468")

[node name="SliderEffect" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("9_fh68b")

[node name="SliderBehavior" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-64, -64)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_57cju")

[connection signal="input_event" from="Slider/Collision" to="." method="_on_collision_input_event"]
